objects/Wholesaler_Line_Item__c.object
<CustomObject>
    <description>To save Direct Customer price details from SAP for Indirect Calculation</description>
    <fields>
        <fullName>APTS_Approval_TNSP__c</fullName>
        <label>Approval Total Net sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Base_Price__c</fullName>
        <description>The list price Direct for the product or service with no adjustments used for indirect calculation</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_ConfigIT_Session_Id__c</fullName>
        <label>ConfigIT Session Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Configuration_Reference_Id__c</fullName>
        <label>Configuration Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Configure_Status__c</fullName>
        <label>Upload Status</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConfigIT Upload</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Cost_Unit__c</fullName>
        <label>Cost Unit</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Cust_Requested_Disc__c</fullName>
        <label>Customer Requested Discount(%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Percentage__c</fullName>
        <label>Disc/Amount (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Type__c</fullName>
        <label>Disc Type</label>
        <picklist>
            <picklistValues>
                <fullName>Net Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substitute Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Discount</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Standard_Discount__c</fullName>
        <description>Placeholder field to hold the value of Standard Discount fetched from SAP.</description>
        <label>Std. Disc</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Unit_Of_Price__c</fullName>
        <label>Unit Of Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Market_Price__c</fullName>
        <label>Market Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price_Override__c</fullName>
        <label>Disc/Amount Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Total_List_Price__c</fullName>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Net_Sales_Price__c</fullName>
        <label>Total Net Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Unit_Net_Price__c</fullName>
        <label>Net Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Net_sales_Price__c</fullName>
        <label>Approval Net sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Percent_Direct__c</fullName>
        <formula>IF ( AND(Product_Configuration__r.APTS_Country__c == &apos;Italy&apos;,ISPICKVAL(APTS_Discount_Type__c, &quot;Additional Discount&quot;)) , APTS_Discount_Percentage__c, APTS_Net_Price_Override__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Percent Direct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approval_SAP_Blank_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Approval SAP Price Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetAdjustment__c</fullName>
        <label>Net Adj. (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <description>The net price for the product or service is the Adjusted Price after applying the Group Adjustment %</description>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the selected product or service</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Indirect_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Configuration__c</fullName>
        <description>R4.1 - Used in Wholesaler Line Item</description>
        <label>Product Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Wholesaler Line Items</relationshipLabel>
        <relationshipName>Wholesaler_Line_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Summary Group</label>
        <referenceTo>Apttus_Config2__SummaryGroup__c</referenceTo>
        <relationshipLabel>Wholesaler Line Items</relationshipLabel>
        <relationshipName>Wholesaler_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalMarketPrice__c</fullName>
        <label>Total Market Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wholesaler__c</fullName>
        <label>Wholesaler</label>
        <referenceTo>Wholesaler__c</referenceTo>
        <relationshipLabel>Wholesaler Line Items</relationshipLabel>
        <relationshipName>Wholesaler_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Wholesaler Line Item</label>
    <nameField>
        <displayFormat>LI-{00000}</displayFormat>
        <label>Line Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wholesaler Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>